[gd_scene load_steps=5 format=2]

[ext_resource path="res://imgs/pinkWall.png" type="Texture" id=1]
[ext_resource path="res://scripts/wall.gd" type="Script" id=2]
[ext_resource path="res://sounds/ballCollisionWall.mp3" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 379.25, 30 )

[node name="wall" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 0.578 )
scale = Vector2( 0.135543, 0.209436 )
texture = ExtResource( 1 )

[node name="wallArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="wallArea"]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="wallCollisionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="wallArea" to="." method="_on_wallArea_area_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
